src/test/deca/context/invalid/objet/classname_already_used.deca
// Description:
//     Declaration de deux classes de même nom.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A {
}

class A{
}

